Adding support for more granular expiry time options (#194)
* Adding support for a more narrow choice of expiry times

* Edited API docs

* Bundle all config related Enums in the same file

* Fix typo

* Bump to 2.5.1
